--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{{ title or metadata.title }}</title>
+    <title>it me, erik</title>
     <meta name="description" content="media projects of erik mabry" />
     <meta name="title" content="projects.erikmabry.me" />
     <meta name="theme-color" content="#ffffff" />
@@ -12,13 +12,18 @@
   </head>
   <body>
     <div class="wrapper">
-      <a href="#skip" class="visually-hidden">skip to main content</a>
       <main id="skip" class="page">
         <nav>
           <ul>
-            <li><a href="about.erikmabry.me" id="about">about</a></li>
-            <li><a href="blog.erikmabry.me" id="blog">blog</a></li>
-            <li><a href="projects.erikmabry.me" id="projects">projects</a></li>
+            <li>
+              <a href="https://about.erikmabry.me" id="about">about</a>
+            </li>
+            <li>
+              <a href="https://blog.erikmabry.me" id="blog">blog</a>
+            </li>
+            <li>
+              <a href="https://projects.erikmabry.me" id="projects">projects</a>
+            </li>
           </ul>
         </nav>
 
