--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 						height="450"
 						style="width: 100%; max-width: 660px; overflow: hidden; border-radius: 10px"
 						sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation"
-						src="https://embed.music.apple.com/us/playlist/102023-listening/pl.u-vxy6JE5t13838Y"
+						src="https://embed.music.apple.com/us/playlist/112023-listening/pl.u-b3b8Mv8HL73739"
 					></iframe>
 				</section>
 			</main>
