--- a/index.html
+++ b/index.html
@@ -14,26 +14,17 @@
 		<a rel="me" href="https://pdx.social/@ripmabry" style="display: none">.</a>
 		<div class="wrapper">
 			<main id="skip" class="page">
-				<nav>
-					<ul>
-						<li>
-							<a href="https://about.erikmabry.me" id="about">about</a>
-						</li>
-						<li>
-							<a href="https://blog.erikmabry.me" id="blog">blog</a>
-						</li>
-						<li>
-							<a href="https://projects.erikmabry.me" id="projects">projects</a>
-						</li>
-					</ul>
-				</nav>
-
+				<nav>updating</nav>
 				<section class="listening">
 					<iframe
 						allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write"
-						frameborder="0"
-						height="450"
-						style="width: 100%; max-width: 660px; overflow: hidden; border-radius: 10px"
+						style="
+							width: 100%;
+							height: 453.9px;
+							max-width: 660px;
+							overflow: hidden;
+							border: none;
+						"
 						sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation"
 						src="https://embed.music.apple.com/us/playlist/112023-listening/pl.u-b3b8Mv8HL73739"
 					></iframe>
